Fix spacing

--- a/src/routes/About.scss
+++ b/src/routes/About.scss
@@ -1,10 +1,10 @@
 @import "config.scss";
 
+// The number of lines the picture should take up. This should match the same
+// number of lines that the column next to the picture is, at full width.
 $lines: 8;
 
 .face {
-	float: right;
 	object-fit: cover;
-	margin-block-end: 0;
 	height: $body-line-height * $lines;
 }
